--- a/public/labs/a2/index.css
+++ b/public/labs/a2/index.css
@@ -244,3 +244,16 @@ p#id-selector-2 {
     width: 20%;
     float: left;
 }
+
+.wd-flex-row-container {
+    display: flex;
+    flex-direction: row;
+}
+
+.wd-flex-grow-1 {
+    flex-grow: 1;
+}
+
+.wd-width-85px {
+    width: 85px;
+}
