finished basic implementation

--- a/src/Kanbas/Courses/Navigation/index.css
+++ b/src/Kanbas/Courses/Navigation/index.css
@@ -4,7 +4,8 @@
     padding: 0px;
     margin: 0px;
     margin-left: 20px;
-    width: 125px;
+    /* width: 125px; */
+    width: 50px;
 }
 
 .wd-navigation li {
