--- a/src/Kanbas/Courses/Modules/index.css
+++ b/src/Kanbas/Courses/Modules/index.css
@@ -7,7 +7,8 @@
 }
 
 .wd-modules {
-  margin: 10px;
+  margin-top: 10px;
+  margin-right: 0px;
 }
 
 .wd-modules > li {
@@ -30,4 +31,5 @@
 
 .button {
   border-radius: 4px;
+  margin-right: 5px;
 }
